# apps/backend/spec/swagger.json
@@ -7,6 +7,93 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"Pick_ToDoDoc.Exclude_keyofToDoDoc.items__": {
+				"properties": {},
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_ToDoDoc.items_": {
+				"$ref": "#/components/schemas/Pick_ToDoDoc.Exclude_keyofToDoDoc.items__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"ToDoItem": {
+				"properties": {
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"checked": {
+						"type": "string"
+					},
+					"body": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"updatedAt",
+					"createdAt",
+					"checked",
+					"body",
+					"id"
+				],
+				"type": "object"
+			},
+			"ToDoDoc": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"ownerId": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"items": {
+						"items": {
+							"$ref": "#/components/schemas/ToDoItem"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"id",
+					"ownerId",
+					"title",
+					"createdAt",
+					"updatedAt",
+					"items"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"Partial_ToDoDoc_": {
+				"properties": {
+					"id": {},
+					"ownerId": {},
+					"title": {},
+					"createdAt": {},
+					"updatedAt": {},
+					"items": {}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
+			},
 			"UserProfile": {
 				"properties": {
 					"id": {
@@ -86,6 +173,114 @@
 		"contact": {}
 	},
 	"paths": {
+		"/toDo": {
+			"get": {
+				"operationId": "ListToDoDocs",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Omit_ToDoDoc.items_"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"toDo"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateToDo",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"toDo"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Partial_ToDoDoc_"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/toDo/{toDoId}": {
+			"get": {
+				"operationId": "GetToDo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ToDoDoc"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"toDo"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "toDoId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "DeleteToDo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ToDoDoc"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"toDo"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "toDoId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/profile/{profileId}": {
 			"get": {
 				"operationId": "GetProfile",
